@@ -1,5 +1,6 @@
 Changes for 1.8.2
 
+ - [ZBX-2006] added explicit dependency on "lber" library to gain better portability on upcoming Fedora "ld" changes. Thanks to Dan Horak. (Dmitry)
  - [ZBX-1575] added UnsafeUserParameters configuration option for agents (asaveljevs)
  - [ZBX-2108] added checking double values for "out of range" errors for the MySQL (Sasha)
  - [ZBX-2114] improvements in sql filtering of hosts and templates by nodes (Aly)
